# pio-zephyr-civetweb-example

./: platformio.ini
src/: main.c
zephyr/: CMakeLists.txt  prj.conf
